--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@ nbdist/
 nbactions.xml
 nb-configuration.xml
 
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
 # Class Files #
 *.class
 
