--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ nbdist/
 nbactions.xml
 nb-configuration.xml
 
+nbproject/*
+!nbproject/project.properties
+!nbproject/project.xml
+
 # Class Files #
 *.class
 
