--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ nbproject/*
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 /JspServletExemplos/ServletControle da Sessão/SistemaLogin02/nbproject/private/
+/ServletExemplos/Servlet05/nbproject/private/
