--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ nbproject/*
 .mtj.tmp/
 /JspServletExemplos/ServletControle da Sessão/SistemaLogin02/nbproject/private/
 /ServletExemplos/Servlet05/nbproject/private/
+/ServletExemplos/Servlet06/nbproject/private/
+/ServletExemplos/Pizzaria/nbproject/private/
